syntax = "proto3";
option go_package = "internal/proto";


message Interest{
  string interest = 1;
}

message User {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  string password = 5;
  string country = 6;
}

message UpdateUserInformation {
  string reference = 1;
  string first_name =2;
  string last_name = 3;
  string address = 4;
  string state = 5;
  string country = 6;
  string apartment_no = 7;
}



//Getting a single user details by email
message GetUserDetailsByEmailRequest{
  string email = 1;
}
message GetUserDetailsByEmailResponse{
  bytes response = 1;
}

//Getting a single user details by reference
message GetUserDetailsByReferenceRequest{
  string reference = 1;
}
message GetUserDetailsByReferenceResponse{
  bytes response = 1;
}

//Get roleID
message GetUserRolesRequest {
  string role = 1;
}
message GetUserRolesResponse {
  string role_id = 1;
}


//Get all roles
message GetAllRolesRequest {}

message Role {
  string role_id = 1;
  string created_at = 2;
  string updated_at = 3;
  string title = 4;
}

message GetAllRolesResponse {
  repeated Role roles = 1;
}

//Add role to user
message AddRoleToUserRequest {
  string user_id = 1;
  string role_id = 2;
}
message AddRoleToUserResponse {
  string message = 1;
}

//Delete role
message DeleteRoleRequest {
  string role_id = 1;
}
message DeleteRoleResponse {
  string message = 1;
}

//Create role
message CreateRoleRequest {
  string role = 1;
}
message CreateRoleResponse {
  string role_id= 1;
  string message = 2;
}

//Create permission
message CreatePermissionRequest {
  string permission = 1;
  string  description = 2;
}
message CreatePermissionResponse {
  string permission_id = 1;
  string message = 2;
}

// update permissions
message UpdatePermissionRequest{
  string permission_id = 1;
  string permission = 2;
}
message UpdatePermissionResponse{
  string message = 1;
}

// delete permissions
message DeletePermissionRequest{
  string permission_id = 1;
}
message DeletePermissionResponse{
  string message = 1;
}

// GetAll permissions
message GetAllPermissionsRequest{
}
message permission {
  string ID = 1;
  string name = 2;
  string description = 3;
}

message GetAllPermissionsResponse{
  repeated permission permissions = 1;
  uint32 count = 2;
}

// Get permission by id
message GetPermissionByIdRequest{
  string permission_id = 1;
}
message GetPermissionByIdResponse{
  string permission = 1;
  string name = 2;
  string description = 3;
}

//create user permission
message CreateRolePermissionRequest{
  string role_id = 1;
  string permission_id = 2;
}
message CreateRolePermissionResponse{
  string message = 1;
}

//delete user permission
message DeleteRolePermissionRequest{
  string role_id = 1;
  string permission_id = 2;
}
message DeleteRolePermissionResponse{
  string message = 1;
}

//get user all permissions
message GetAllRolePermissionsRequest{
  string role_id = 1;
}

message RolePermission {
  string role_id = 1;
  string permission_id = 2;
}
message GetAllRolePermissionsResponse{
  repeated RolePermission rolepermissions = 1;
  uint32 count = 2;
}


//update user permission
message UpdateRolePermissionRequest{
  string role_id = 1;
  string permission_id = 2;
  string permission = 3;
}
message UpdateRolePermissionResponse{
  string message = 1;
}

//Create user
message CreateUserRequest {
  User user= 1;
}
message CreateUserResponse {
  string message= 1;
  string userReference = 2;

}

//Create Interest
message CreateInterestRequest {
  Interest interest= 1;
}
message CreateInterestResponse {
  string interest_id =1;
  string item = 2;
}

//Create user interest
message CreateUserInterestRequest {
  string interest_id =1;
  string user_id =2;
}
message CreateUserInterestResponse {
  string message = 1;
}

//Delete interest
message DeleteInterestRequest {
  string interest_id = 1;
}
message DeleteInterestResponse {
  string message = 1;
}

//Create OTP for user
message CreateOTPRequest {
  string reference = 1;
  string otp = 2;
}
message CreateOTPResponse {
  string message = 1;
}


message UpdateUserInformationRequest {
  UpdateUserInformation personal_information = 1;
}
message UpdateUserInformationResponse {
  string message = 1;
}

message ImageInfo {
  string user_id = 1;
  string image_type = 2;
}
message UploadImageRequest{
  oneof data {
    ImageInfo info = 1;
    bytes chunk_data = 2;
  };
}
message UploadImageResponse{
  string message = 1;
  uint32 image_size = 2;
}

//Delete user
message DeleteUserRequest {
  string user_id = 1;
}
message DeleteUserResponse {
  string message = 1;
}

//Get all users
message GetAllUsersRequest {
}

message UserData {
  string id = 1;
  string created_at = 2;
  string updated_at = 3;
  string email = 4;
  string phone_number =5;
  bool is_active = 6;
  string first_name = 7;
  string last_name = 8;
  string address = 9;
  string state = 10;
  string country = 11;
  string apartment_no = 12;

}
message GetAllUsersResponse {
  repeated UserData users = 1;
  uint32 total_users = 2;
}

////////////////////////////////
// Send OTP to user by Email //
//////////////////////////////

message SendOTPRequestByEmail {
  string reference = 1;
}

message SendOTPResponseByEmail {
  string message = 1;
}

// Send OTP to user by Phone //
message SendOTPRequestByPhone {
  string reference = 1;
}

message SendOTPResponseByPhone {
  string message = 1;
}

// Verify OTP By Phone//
message VerifyOTPByPhoneRequest {
  string phone = 1;
}

message VerifyOTPByPhoneResponse {
  string message = 1;
}

message UserProfileInfo {
  string firstName = 1;
  string lastName = 2;
  string address = 3;
  string State = 4;
  string Country = 5;
  string apartmentNo = 6;
}

service UserService{
  rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUserDetailsByEmail(GetUserDetailsByEmailRequest) returns (GetUserDetailsByEmailResponse) {}
  rpc GetUserDetailsByReference(GetUserDetailsByReferenceRequest) returns (GetUserDetailsByReferenceResponse) {}
  rpc AddRoleToUser(AddRoleToUserRequest) returns (AddRoleToUserResponse) {}
  rpc VerifyOTP (CreateOTPRequest) returns (CreateOTPResponse) {}
  rpc UpdateUserInformation (UpdateUserInformationRequest ) returns (UpdateUserInformationResponse ) {}
  rpc UploadImage( stream UploadImageRequest) returns (UploadImageResponse) {}
  rpc CreateInterest (CreateInterestRequest) returns (CreateInterestResponse) {}
  rpc CreateUserInterest(CreateUserInterestRequest ) returns (CreateUserInterestResponse ){}
  rpc DeleteInterest(DeleteInterestRequest) returns (DeleteInterestResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse) {}
  rpc GetAllRoles(GetAllRolesRequest) returns (GetAllRolesResponse) {}
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse) {}
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse) {}
  rpc CreatePermission(CreatePermissionRequest) returns (CreatePermissionResponse) {}
  rpc GetPermissionById(GetPermissionByIdRequest) returns (GetPermissionByIdResponse) {}
  rpc GetAllPermissions(GetAllPermissionsRequest) returns (GetAllPermissionsResponse) {}
  rpc DeletePermission(DeletePermissionRequest) returns (DeletePermissionResponse) {}
  rpc UpdatePermission(UpdatePermissionRequest) returns (UpdatePermissionResponse) {}
  rpc CreateUserPermission(CreateRolePermissionRequest) returns (CreateRolePermissionResponse) {}
  rpc DeleteUserPermission(DeleteRolePermissionRequest) returns (DeleteRolePermissionResponse) {}
  rpc GetAllRolePermission(GetAllRolePermissionsRequest) returns (GetAllRolePermissionsResponse) {}
  rpc UpdateUserPermission(UpdateRolePermissionRequest) returns (UpdateRolePermissionResponse) {}
  rpc SendOTPByEmail(SendOTPRequestByEmail) returns (SendOTPResponseByEmail) {}
  rpc SendOTPByPhone(SendOTPRequestByPhone) returns (SendOTPResponseByPhone) {}
  rpc VerifyOTPByPhone(VerifyOTPByPhoneRequest) returns (VerifyOTPByPhoneResponse) {}
}